--- a/app/assets/stylesheets/base/_bases.scss
+++ b/app/assets/stylesheets/base/_bases.scss
@@ -1,10 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  display: table;
+}
+
 body {
+  font-family: 'Lato';
+}
+
+body.unauthenticated {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: #F1F1F1;
+}
+
+body.authenticated {
   padding-top: 80px;
   padding-bottom: 80px;
-  font-family: 'Lato';
+}
+
+.unauthenticated-box {
+  display: block;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid #DCDCDC;
+  background-color: white;
 }
 
 h1, h2, h3, h4 {
