Implementa alertas e corrige CSS

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,6 +21,7 @@ html
       .container
         = render 'layouts/navbar'
         = render 'layouts/header'
+        = render 'layouts/flash'
         = yield
 
   - else
@@ -30,6 +31,7 @@ html
       .unauthenticated-box.center-block
 
         = render 'layouts/header'
+        = render 'layouts/flash'
         = yield
 
         hr.divider
