--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 /*
  *= require_tree .
  *= require bootstrap-datetimepicker
+ *= require froala_editor.min.css
+ *= require froala_style.min.css
+ *= require font-awesome
  *= require_self
  */
 
