--- a/app/views/records/_discussion_fields.html.slim
+++ b/app/views/records/_discussion_fields.html.slim
@@ -6,7 +6,7 @@
 
   .form-group
     = f.label 'Discussão'
-    = f.text_area :content, class: 'form-control'
+    = f.text_area :content, id: 'edit',  class: 'form-control wysiwyg-editor'
   
   = link_to_remove_association f, class: 'btn btn-warning' do
     | Excluir Pauta
@@ -14,3 +14,8 @@
     i.fa.fa-times
 
   hr.divider
+
+/ javascript:
+/   $(function() {
+/       $('.wysiwyg-editor').froalaEditor()
+/   });
