Tentativa de implementação de editor wysihtml5

--- a/app/assets/stylesheets/base/_index.scss
+++ b/app/assets/stylesheets/base/_index.scss
@@ -3,6 +3,8 @@
 @import "bootstrap";
 @import "bootswatch/sandstone/bootswatch";
 
+@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
+
 @import 'bases';
 @import 'normalize';
 
