--- a/app/views/records/_discussion_fields.html.slim
+++ b/app/views/records/_discussion_fields.html.slim
@@ -6,7 +6,7 @@
 
   .form-group
     = f.label 'Discussão'
-    = f.text_area :content, id: 'edit',  class: 'form-control wysiwyg-editor'
+    = f.text_area :content, id: "edit",  class: 'form-control wysihtml5'
   
   = link_to_remove_association f, class: 'btn btn-warning' do
     | Excluir Pauta
@@ -15,7 +15,7 @@
 
   hr.divider
 
-/ javascript:
-/   $(function() {
-/       $('.wysiwyg-editor').froalaEditor()
-/   });
+javascript:
+  $(document).ready(function(){
+    $('.nested-fields .wysihtml5').last().wysihtml5();
+  });
