Corrige bug na hora de salvar a ata

--- a/app/views/records/_discussion_fields.html.slim
+++ b/app/views/records/_discussion_fields.html.slim
@@ -8,7 +8,7 @@
     = f.label 'Discussão'
     = f.text_area :content, class: "tinymce"
   
-  = tinymce :language => "pt_BR"
+  / = tinymce :language => "pt_BR"
 
   = link_to_remove_association f, class: 'btn btn-warning' do
     | Excluir Pauta
@@ -16,3 +16,16 @@
     i.fa.fa-times
 
   hr.divider
+
+/ javascript:
+/   $(function () {
+/     tinymce.init({
+/         selector: "textarea",
+/         statusbar: false,
+/         setup: function (editor) {
+/             editor.on('change', function () {
+/                 tinyMCE.triggerSave();
+/             });
+/         }
+/     });
+/   });
