--- a/app/views/records/edit.html.slim
+++ b/app/views/records/edit.html.slim
@@ -1,6 +1,6 @@
 = content_for :text_logo, "#{@record.number}ª #{select_meeting_name(@record.sector.short_name)}"
 
-= form_for @record do |f|
+= form_for @record, html: { id: 'edit-form' } do |f|
 
   / Informações Básicas
   .row
@@ -46,7 +46,6 @@
       .links
         = link_to_add_association 'Adicionar Membro', f, :records_users, class: 'btn btn-success'
 
-
   / Pautas
   .row
 
@@ -63,6 +62,11 @@
       .links
         = link_to_add_association 'Adicionar Pauta', f, :discussions, class: 'btn btn-success'
 
+  div id="showValues"
+    | Show textarea values
+
+  #values
+
   / Submit e voltar
   .row
     div style="margin-top: 40px"
@@ -76,4 +80,26 @@ javascript:
     $('#datetimepicker').datetimepicker({
       locale: 'pt-br'
     });
+  });
+
+javascript:
+  $(function () {
+      tinymce.init({
+          selector: "textarea",
+          statusbar: false,
+          setup: function (editor) {
+              editor.on('change', function () {
+                  editor.save();
+              });
+          }
+      });
+
+      $('#showValues').click(function () {
+          var msg = '';
+          $('textarea').each(function (index, ta) {
+              var $ta = $(ta);
+              msg += '<div><strong>Textarea "' + $ta.attr('name') + '" value:</strong><br />' + $ta.val() + '</div>';
+          });
+          $('#values').html(msg);
+      });
   });
