Corrige form de alteracao de senha

--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -14,14 +14,14 @@
   .form-group
     .input-group
       .input-group-addon
-        i.fa.fa-envelope
-      = f.password_field :password, class: 'form-control', required: true
+        i.fa.fa-key
+      = f.password_field :password, class: 'form-control', placeholder: 'Senha' required: true
 
   .form-group
     .input-group
       .input-group-addon
-        i.fa.fa-envelope
-      = f.password_field :password_confirmation, class: 'form-control', required: true
+        i.fa.fa-key
+      = f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirmação de Senha', required: true
 
   .row
 
