--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -15,7 +15,7 @@
     .input-group
       .input-group-addon
         i.fa.fa-key
-      = f.password_field :password, class: 'form-control', placeholder: 'Senha' required: true
+      = f.password_field :password, class: 'form-control', placeholder: 'Senha', required: true
 
   .form-group
     .input-group
