--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,22 +1,10 @@
-.row style="padding-top: 10px"
-
-  .col-sm-2.col-xs-12
-    
-    .visible-xs
-      .text-center
-        = image_tag 'cjr.png', class: 'logo'
-
-    .hidden-xs
+.media
+  .media-left.media-middle
+    a[href="#"]
       = image_tag 'cjr.png', class: 'logo'
-
-  .col-sm-10.col-xs-12
-  
-    .visible-xs
-      h1.text-center
+  .media-body.media-middle
+    h4.media-heading
+      .text-right      
         = yield :text_logo
 
-    .hidden-xs
-      h1.text-right
-        = yield :text_logo
-        
 hr.divider
