--- a/app/views/layouts/modal.html.slim
+++ b/app/views/layouts/modal.html.slim
@@ -5,6 +5,7 @@
         button.close data-dismiss="modal" type="button" 
           span aria-hidden="true"  ×
           span.sr-only Fechar
-        h4#mainModalLabel.modal-title
-          = yield :title if content_for? :title
+        p#mainModalLabel.modal-title
+          strong
+            = yield :title if content_for? :title
       = yield
