--- a/app/views/records/edit.html.slim
+++ b/app/views/records/edit.html.slim
@@ -1,6 +1,9 @@
+- unless current_user.admin? or @record.sector.short_name == current_user.sector.short_name
+  - redirect_to_root
+
 = content_for :text_logo, "#{@record.number}ª #{select_meeting_name(@record.sector.short_name)}"
 
-= form_for @record, html: { id: 'edit-form' } do |f|
+= form_for @record do |f|
 
   / Informações Básicas
   .row
@@ -11,7 +14,7 @@
           = render 'updated_at'
 
     .col-sm-12
-      h3 Informações Básicas
+      h4 Informações Básicas
 
     .col-sm-12
       hr.divider
@@ -33,10 +36,7 @@
   .row
     
     .col-sm-12
-      h3 Membros
-    
-    .col-sm-12
-      hr.divider
+      h4 Membros
 
   .row
 
@@ -51,21 +51,37 @@
 
     div style="margin-top: 30px"
       .col-sm-12
-        h3 Pautas
-    
+        h4 Pautas e Discussões
+
     .col-sm-12
-      hr.divider
-        
-    .col-sm-12
-      = f.fields_for :discussions do |discussion|
-        = render 'discussion_fields', f: discussion
-      .links
-        = link_to_add_association 'Adicionar Pauta', f, :discussions, class: 'btn btn-success'
+      div style="margin-top: 20px"
+        = f.text_area :discussion
 
   / Submit e voltar
   .row
-    div style="margin-top: 40px"
-      .col-sm-12
-        .btn-group
-          = f.submit 'Salvar', class:'btn btn-primary'
-          = link_to 'Voltar', records_path, class:'btn btn-primary'
+    .col-sm-12
+      .btn-group
+        = f.submit 'Salvar', class:'btn btn-primary'
+        = link_to 'Voltar', records_path, class:'btn btn-primary'
+
+javascript:
+  $(document).ready(function() {
+    var simplemde = new SimpleMDE({
+      autofocus: true,
+      autosave: {
+          enabled: true,
+          uniqueId: "MyUniqueID",
+          delay: 1000,
+      },
+      placeholder: 'Digite aqui as pautas e discussões desta reunião...\n\nIt\'s markdown guy! Qualquer dúvida clique no ícone de ajuda :]',
+      shortcuts: {
+        drawTable: "Alt-Shift-T"
+      },
+      showIcons: ["code", "table"],
+      spellChecker: false,
+      status: ["autosave", "lines", "words", "cursor"]
+    }); 
+    $('#datetimepicker').datetimepicker({
+      locale: 'pt-br'
+    });
+  });
