--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -2,29 +2,46 @@
   
   .modal-body
 
-    .form-group
-      = f.label 'Nome'
-      = f.text_field :name, class: 'form-control', required: true
+    .row
+
+      .col-sm-6.col-xs-12
+        .form-group
+          = f.label 'Nome'
+          = f.text_field :name, class: 'form-control', required: true
+
+      .col-sm-6.col-xs-12
+        .form-group
+          = f.label 'Email'
+          = f.email_field :email, class: 'form-control', required: true
 
     - if current_user.admin?
 
-      .form-group
-        = f.label 'Perfil'
-        = f.select :role_id, Role.all.map { |r| [r.name, r.id] }, 
-                             { include_blank: 'Selecione o perfil' },
-                             { class: 'form-control', required: true }
+      .row
 
-    .form-group
-      = f.label 'Email'
-      = f.email_field :email, class: 'form-control', required: true
+        .col-sm-4.col-xs-12
+          .form-group
+            = f.label 'Perfil'
+            = f.select :role_id, Role.all.map { |r| [r.name, r.id] }, 
+                                 { include_blank: 'Selecione o perfil' },
+                                 { class: 'form-control', required: true }
+        .col-sm-8.col-xs-12
+          .form-group
+            = f.label 'Núcleo'
+            = f.select :sector_id, Sector.all.map { |s| [s.name, s.id] }, 
+                                 { include_blank: 'Selecione o núcleo' },
+                                 { class: 'form-control', required: true }
 
-    .form-group
-      = f.label 'Senha'
-      = f.password_field :password, class: 'form-control'
+    .row
 
-    .form-group
-      = f.label 'Confirmação de Senha'
-      = f.password_field :password_confirmation, class: 'form-control'
+      .col-sm-6.col-xs-12
+        .form-group
+          = f.label 'Senha'
+          = f.password_field :password, class: 'form-control'
+
+      .col-sm-6.col-xs-12
+        .form-group
+          = f.label 'Confirmação de Senha'
+          = f.password_field :password_confirmation, class: 'form-control'
 
   .modal-footer
     = f.submit 'Salvar', class: 'btn btn-primary'
