--- a/app/views/records/new.html.slim
+++ b/app/views/records/new.html.slim
@@ -28,9 +28,7 @@
           span.glyphicon.glyphicon-calendar
     
   .modal-footer
-
-    = f.submit 'Salvar', class:'btn btn-primary'
-    = link_to 'Voltar', records_path, class:'btn btn-default pull-left'
+    = f.submit 'Criar', class:'btn btn-success'
 
 javascript:
   $(document).ready(function() {
