--- a/app/views/records/_records_user_fields.html.slim
+++ b/app/views/records/_records_user_fields.html.slim
@@ -5,7 +5,7 @@
     .col-sm-6.col-xs-12
       .form-group
         = f.label 'Nome do Membro'
-        = f.select :user_id, User.all.map { |u| [u.name, u.id] },
+        = f.select :user_id, User.all.order(:name).map { |u| [u.name, u.id] },
                              { include_blank: 'Selecione o membro' },
                              { class: 'form-control' }
     .col-sm-4.col-xs-6
@@ -15,7 +15,7 @@
                                { }, { class:'form-control' }
 
     .col-sm-2.col-xs-6
-      div style="margin-top: 25px"
+      div style="margin-top: 39px"
         = link_to_remove_association f, class: 'btn btn-warning btn-block' do
           | Excluir Membro
           | &nbsp;&nbsp;
