--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -12,7 +12,10 @@
       .col-sm-6.col-xs-12
         .form-group
           = f.label 'Email'
-          = f.email_field :email, class: 'form-control', required: true
+          - if current_user.admin?
+            = f.email_field :email, class: 'form-control', required: true
+          - else
+            = f.email_field :email, class: 'form-control', required: true, disabled: true
 
     - if current_user.admin?
 
