--- a/app/assets/stylesheets/base/_bases.scss
+++ b/app/assets/stylesheets/base/_bases.scss
@@ -35,6 +35,13 @@ body.authenticated {
   background-color: white;
 }
 
+.print-view-box {
+  display: block;
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+
 h1 {
   font-size: 35px;
 }
