--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -19,7 +19,7 @@
       = render 'updated_at'
 
   .col-sm-2
-    = link_to 'Versão para Impressão', print_view_path(@record), class: 'btn btn-success pull-right'
+    = link_to 'Versão para Impressão', print_view_path(@record), target: '_blank', class: 'btn btn-success pull-right'
 
 hr.divider
 
