--- a/app/assets/stylesheets/base/_bases.scss
+++ b/app/assets/stylesheets/base/_bases.scss
@@ -46,6 +46,22 @@ h1 {
   font-size: 35px;
 }
 
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 27px;
+}
+
+h4 {
+  font-size: 22px;
+}
+
+h5 {
+  font-size: 18px;
+}
+
 // h1, h2, h3, h4 {
 //   font-family: 'Lobster Two';
 //   color: #515151;
