--- a/app/views/records/print_view.html.slim
+++ b/app/views/records/print_view.html.slim
@@ -44,8 +44,7 @@ p
         - @record.records_users.each do |records_user|
 
           tr
-            td 
-              = status_tag(records_user.status.name)
+            td = status_tag(records_user.status.name)
             td = records_user.user.name
             td = records_user.user.email
 
