--- a/app/views/records/show.html.slim
+++ b/app/views/records/show.html.slim
@@ -51,8 +51,7 @@ hr.divider
           - @record.records_users.each do |records_user|
 
             tr
-              td 
-                = status_tag(records_user.status.name)
+              td = status_tag(records_user.status.name)
               td = records_user.user.name
               td = records_user.user.email
 .row
