--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -3,20 +3,20 @@
 <div class="row">
     <%= form_tag('/select_sector_records', remote: true) do %>
         <div class="col-sm-9 col-xs-12">
-            <%= collection_select :sector, :id, Sector.all, 
-                :id, :name, { prompt: 'Selecione um núcleo', 
+            <%= collection_select :sector, :id, Sector.all,
+                :id, :name, { prompt: 'Selecione um núcleo',
                             selected: session[:sector_id] },
                 class:'form-control', id: 'sector-select'%>
         </div>
         <div class="col-sm-3 col-xs-12">
-            <%= link_to 'Nova Ata', new_record_path, data: { modal: true }, class: 'btn btn-success btn-block' %>
+            <%= link_to 'Nova Ata', new_record_path , class: 'btn btn-success btn-block' %>
         </div>
     <% end %>
 </div>
 <div class="row" style="margin-top: 20px">
     <div class="col-sm-12">
         <div id="records">
-            <table class="table dataTable">
+            <table class="table " id="dataTable">
                 <thead>
                     <tr>
                         <th>Status</th>
@@ -52,7 +52,7 @@
     </div>
 </div>
 <script>
-    $('.dataTable').DataTable({
+    $('#dataTable').DataTable({
     'dom': '<"top">rt<"pull-left spacing"f><"pull-right spacing"p><"clear">',
     "language": { "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese.json"},
     "responsive": true,
