--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -1,15 +1,14 @@
-<div id="mainModal" class="modal custom fade" aria-labelledby="mainModalLabel" role="dialog" tabindex="-1" >
+<div id="mainModal" class="modal custom fade" aria-hidden="true" aria-labelledby="mainModalLabel" role="dialog" tabindex="-1" >
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button class="close" data-dismiss="modal" type="button">
-                    <span aria-hidden="true"  ×></span>
-                    <span class="sr-only" Fechar></span>
+                    <span aria-hidden="true"></span>
+                    <span class="sr-only"></span>
                 </button>
                 <p id="mainModalLabel" class="modal-title">
                     <strong>
                         <%= yield :title if content_for? :title %>
-                        <% end %>
                     </strong>
                 </p>
             </div>
