--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,7 +1,3 @@
-<% unless current_user.admin? or @record.sector.short_name == current_user.sector.short_name %>
-    <% redirect_to_root %>
-<% end %>
-
 <%= content_for :text_logo, "#{@record.number}ª #{select_meeting_name(@record.sector.short_name)}" %>
 
 <div id="unique_id" style="display: none">
@@ -52,6 +48,20 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
+            <div class="nested-fields" style="margin: 5px 0px 5px 0px">
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <p>Nomes dos Membros</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-xs-6">
+                        <div class="form-group">
+                            <p>Status</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <%= f.fields_for :records_users do |records_user| %>
                 <%= render 'records_user_fields', f: records_user %>
             <% end %>
