--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :text_logo, 'Sistema de Gerenciamento de Atas' %>
 
 <div class="row">
-    <%= form_tag('/select_sector_records', remote: true) do %>
+    <%= form_tag('select_sector_records', remote: true) do %>
         <div class="col-sm-9 col-xs-12">
             <%= collection_select :sector, :id, Sector.all, 
                 :id, :name, { prompt: 'Selecione um núcleo', 
@@ -19,18 +19,18 @@
             <table class="table dataTable">
                 <thead>
                     <tr>
-                        <th>Status</th>
-                        <th>Número</th>
-                        <th>Data</th>
-                        <th>Núcleo</th>
-                        <th></th>
+                        <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" style="width: 102px;" aria-label="Status: activate to sort column ascending">Status</th>
+                        <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" style="width: 116px;" aria-label="Número: activate to sort column ascending">Número</th>
+                        <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" style="width: 189px;" aria-label="Data: activate to sort column ascending">Data</th>
+                        <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" style="width: 405px;" aria-label="Núcleo: activate to sort column ascending">Núcleo</th>
+                        <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" style="width: 138px;" aria-label=": activate to sort column ascending"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <% @records.each do |record| %>
                         <tr>
                             <td>
-                                <% if (record.discussion.blank? or record.users.empty?) %>
+                                <% if record.discussion.blank? or record.users.empty? %>
                                     <div class="label label-danger">
                                         Incompleta
                                     </div>
@@ -52,10 +52,86 @@
     </div>
 </div>
 <script>
-    $('.dataTable').DataTable({
+$('.dataTable').DataTable({
     'dom': '<"top">rt<"pull-left spacing"f><"pull-right spacing"p><"clear">',
     "language": { "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese.json"},
     "responsive": true,
     "pageLength": 7
   });
+</script>
+<script>
+var populateTable = function(data) {
+
+  table_div = $('#records');
+  table_div.empty();
+
+  if (data.length == 0) {
+
+    var alert = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle"></i>&nbsp;&nbsp;Não há atas para o núcleo selecionado.</div>';
+    table_div.append(alert);
+    table_div.hide().fadeIn('slow');
+
+  }
+
+  else {
+
+    var table = $('<table id="records-table"></table>').addClass('table');
+    var thead = '<thead><tr><th>Status</th><th>Número</th><th>Data</th><th></th></tr></thead>';
+
+    table.append(thead)
+
+    for (var i = 0; i < data.length; i++) {
+
+      var row = $('<tr></tr>');
+
+      if (data[i].discussion || data[i].records_users.length == 0) {
+        var status = '<td><div class="label label-success">Completa</div></td>';
+      }
+
+      else {
+        var status = '<td><div class="label label-danger">Incompleta</div></td>';
+      }
+
+      row.append(status);
+
+      var content = '<td>' + data[i].number + '</td><td>' + data[i].date + '</td>';
+      var link = "<td align='right'><a href=/records/" + data[i].id + ">Visualizar Ata</a></td>";
+
+      row.append(content);
+      row.append(link);
+      table.append(row);
+
+    }
+
+    table_div.append(table);
+
+    table.DataTable({
+      'dom': '<"top">rt<"pull-left spacing"f><"pull-right spacing"p><"clear">',
+      "language": { "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese.json"},
+      responsive: true
+    });
+
+  }
+}
+
+var selectSectorAndPopulateTable = function(sector_id) {
+  $.ajax('/sectors/' + sector_id + '/records.json', {
+    success: function(data) {
+      populateTable(data);
+    },
+    error: function(data) {
+      console.log(data);
+    }
+  });
+}
+
+$('document').ready(function() {
+  $('#sector-select').on('change', function() {
+    sector_id = $('#sector-select').val();
+    if (sector_id) {
+      selectSectorAndPopulateTable(sector_id);
+    }
+  });
+});
+
 </script>
