Tirando linha que ativa modal

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -9,7 +9,7 @@
                 class:'form-control', id: 'sector-select'%>
         </div>
         <div class="col-sm-3 col-xs-12">
-            <%= link_to 'Nova Ata', new_record_path , class: 'btn btn-success btn-block' %>
+            <%= link_to 'Nova Ata', new_record_path , class: 'btn btn-success btn-block', data: { modal: true } %>
         </div>
     <% end %>
 </div>
